k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starttech-frontend
  namespace: starttech
  labels:
    app: starttech-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: starttech-frontend
  template:
    metadata:
      labels:
        app: starttech-frontend
    spec:
      containers:
      - name: frontend
        image: verybest1/starttech-frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starttech-backend
  namespace: starttech
  labels:
    app: starttech-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: starttech-backend
  template:
    metadata:
      labels:
        app: starttech-backend
    spec:
      containers:
      - name: backend
        image: verybest1/starttech-backend:latest
        ports:
        - containerPort: 5000
