k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starttech-frontend-service
  namespace: starttech
spec:
  type: ClusterIP
  selector:
    app: starttech-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: starttech-backend-service
  namespace: starttech
spec:
  type: ClusterIP
  selector:
    app: starttech-backend
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
