k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: starttech-ingress
  namespace: starttech
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: app.starttech.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: starttech-frontend-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: starttech-backend-service
            port:
              number: 5000
